02-Refactoring for MVC

--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@
 
       <div class="search-results">
         <ul class="results">
-          <a href="#5ed6604591c37cdc054bcd09">Select</a>
+          <h2>MY RECIPES FROM MY API!</h2>
+         <a href="#6607cfd8b7c9124737b6bb3c">MY API RECIPE 1</a>
+         <a href="#6607cfd8b7c9124737b6bb47">MY API RECIPE 2</a>
+         <h2>HIS RECIPES FROM HIS API</h2>
+          <a href="#5ed6604591c37cdc054bcd09">HIS RECIPE</a>
+
+
+          <!--5ed6604591c37cdc054bcf8d-->
           <!-- 
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
