07:Implementing Search results - Part 2 - COMPLETED

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 
       <div class="search-results">
         <ul class="results">
-          <h2>MY RECIPES FROM MY API!</h2>
-         <a href="#6607cfd8b7c9124737b6bb3c">MY API RECIPE 1</a>
+          <!-- <h2>MY RECIPES FROM MY API!</h2> -->
+         <!-- <a href="#6607cfd8b7c9124737b6bb3c">MY API RECIPE 1</a>
          <a href="#6607cfd8b7c9124737b6bb47">MY API RECIPE 2</a>
          <h2>HIS RECIPES FROM HIS API</h2>
-          <a href="#5ed6604591c37cdc054bcd09">HIS RECIPE</a>
+          <a href="#5ed6604591c37cdc054bcd09">HIS RECIPE</a> -->
 
 
           <!--5ed6604591c37cdc054bcf8d-->
